test/errors/decimal_literal_overflow_fail.hy
decimal tooLarge = 1e5000
